packages/gaist/examples/invalid/unexpected-token.gaist
// Unexpected token in expression
state {
  count = 0;
}

logic {
  function test() {
    count = + * 5;
  }
} 